Fix header-image spacings

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -94,8 +94,8 @@
       flex-grow: 1;
       height: 50px;
       padding: 0px;
-      margin: 5px 0;
       border-bottom: 0;
+      margin: 0;
 
       input {
         width: 100%;
@@ -108,7 +108,7 @@
   .xp {
     flex-grow: 0;
     flex-direction: row;
-    flex-basis: 140px;
+    flex-basis: 130px;
     align-items: center;
 
     .xp {
